--- a/signup.html
+++ b/signup.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
-		
+<title>OOPS Market</title>
+<link href="Assets/img/bg.png" rel="shortcut icon">		
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
