--- a/NewAd.html
+++ b/NewAd.html
@@ -92,7 +92,7 @@ header .add-ad a{
 
 					</form>
 				</div>
-				<div class="col-6"><img src="Assets/img/Group 33.png" style="max-width: 100%;" alt=""></div>
+				<div class="col-6 leftsection" ><img src="Assets/img/Group 33.png" style="max-width: 100%;" alt=""></div>
 			</div>
 		</div>
 	</section>
