--- a/choosead.html
+++ b/choosead.html
@@ -67,7 +67,7 @@ header .add-ad a{
 					
 					
 				</div>
-				<div class="col-6"><img src="Assets/img/Group 33.png" style="max-width: 100%;" alt=""></div>
+				<div class="col-6 leftsection"><img src="Assets/img/Group 33.png" style="max-width: 100%;" alt=""></div>
 			</div>
 		</div>
 	</section>
